# backend-assessment

./: Dockerfile  README.md  app.py  config.py  controllers.py  decorators.py  errors.py  models.py  posts.py  pyproject.toml  requirements.txt  schemas.py
api/: decorators.py  errors.py  models.py  posts_client.py  routes.py  schemas.py
tests/: test_posts.py
