[tool.poetry]
name = "assessment-flask"
version = "0.1.0"
description = ""
authors = ["mike <myke2424@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

Flask = "^2.0.2"
marshmallow = "^3.14.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
